[package]
name = "tasmota-reset"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["time"] }
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
color-eyre = "0.5"
dotenv = "0.15.0"
ctrlc = { version = "3.1.7", features = ["termination"] }
rumqttc = "0.2.0"