[package]
name = "tasmota-reset"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
color-eyre = "0.5"
dotenv = "0.15.0"
ctrlc = { version = "3", features = ["termination"] }
rumqttc = "0.8"